tests/fixtures/invalid/bool_bitand_str.py
# Cannot bitwise AND Bool and Str
x: bool = True & "hello"
